添加工具类 迁移jadx项目反编译相关代码作为此项目核心引擎